@@ -195,7 +195,7 @@ public class AVG extends EvalFunc<Double> implements Algebraic {
         } else {
             output.set(0, null);
         }
-        output.set(1, new Long(count));
+        output.set(1, Long.valueOf(count));
         return output;
     }
 
