@@ -86,7 +86,7 @@ public class IntAvg extends EvalFunc<Double> implements Algebraic {
                     Tuple tp = bg.iterator().next();
                     i = (Integer)tp.get(0);
                 }
-                t.set(0, i != null ? new Long(i): null);
+                t.set(0, i != null ? Long.valueOf(i): null);
                 if (i != null)
                     t.set(1, 1L);
                 else
@@ -175,11 +175,11 @@ public class IntAvg extends EvalFunc<Double> implements Algebraic {
             count += (Long)t.get(1);
         }
         if(sawNonNull) {
-            output.set(0, new Long(sum));
+            output.set(0, Long.valueOf(sum));
         } else {
             output.set(0, null);
         }
-        output.set(1, new Long(count));
+        output.set(1, Long.valueOf(count));
         return output;
     }
 
@@ -225,7 +225,7 @@ public class IntAvg extends EvalFunc<Double> implements Algebraic {
         }
 
         if(sawNonNull) {
-            return new Long(sum);
+            return Long.valueOf(sum);
         } else {
             return null;
         }
